# tap-kaloricketabulky

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: create-release-branch.yml  lint.yml  pytest.yml  release.yml
scripts/: gen_schemas.py
tap_kaloricketabulky/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_kaloricketabulky/schemas/: diary.json  diary_summary.json  snapshot.json  statistics_summary.json
tests/: __init__.py  conftest.py  test_package.py  test_schemas.py  test_streams.py  test_sync_client.py  test_tap.py
